# dsa-verify

./: .gitignore  CMakeLists.txt  Makefile  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: simple-verify.c  simple_verify.c  verify-tool.c  verify_tool.c
include/: dsa-verify.h  dsa_verify.h
src/: der.c  der.h  dsa-verify.c  dsa_verify.c  mp_math.h  sha1.c  sha1.h
